--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ let isMobileView = false;
 ---
 
 <!doctype html>
-<html lang="en" class="bg-slate-500">
+<html lang="en" class="bg-stone-200">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
