--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -35,7 +35,7 @@
           <span class="text-sm">
             <p class="pb-2">Monday - Friday</p>
             <p class="pb-2">9:00 AM - 5:00 PM</p>
-            <p class="pb-2">Saturday & Sunday</p>
+            <p class="pb-2">Saturday - Sunday</p>
             <p class="pb-2">Closed</p>
           </span>
         </div>
