--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -168,7 +168,12 @@ import { Image } from "astro:assets";
         >
           <div class="w-full sm:w-1/2 px-1.5 flex flex-col items-center pt-4">
             <div class="border-2 border-sky-500 rounded-full p-4">
-              <Image src={hexagon} width={56} alt="a hexagon" />
+              <Image
+                src={hexagon}
+                width={56}
+                draggable={false}
+                alt="a hexagon"
+              />
             </div>
             <h3 class="text-2xl text-center text-stone-800 pt-2">
               Company Expectations
@@ -189,7 +194,12 @@ import { Image } from "astro:assets";
           </div>
           <div class="w-full sm:w-1/2 px-1.5 flex flex-col items-center pt-4">
             <div class="border-2 border-sky-500 rounded-full p-4">
-              <Image src={truckIcon} width={56} alt="a truck" />
+              <Image
+                src={truckIcon}
+                width={56}
+                draggable={false}
+                alt="a truck"
+              />
             </div>
             <h3 class="text-2xl text-center text-stone-800 pt-2">
               Driver Expectations
@@ -215,9 +225,8 @@ import { Image } from "astro:assets";
 
       <div class="w-full bg-sky-600 py-6 text-slate-50">
         <div class="m-auto p-4 max-w-[calc(100% - 2rem)]">
-          <h3 class="text-3xl text-center">Are you looking for work?</h3>
-          <h4 class="text-2xl text-center">We are hiring!</h4>
-          <br />
+          <h3 class="text-3xl text-center mb-4">Are you looking for work?</h3>
+          <h4 class="text-2xl text-center mb-4">We are hiring drivers!</h4>
           <p class="text-base">
             Do you have a Class 1 License with Air brake certificate?
             <br />
