--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -12,7 +12,7 @@ const { orientation } = Astro.props;
   <ul
     class:list={[
       ` flex text-center items-center`,
-      `${orientation === "vertical" && "flex-col items-center w-full justify-evenly"}`,
+      `${orientation === "vertical" && "flex-col items-center w-full"}`,
     ]}
   >
     <li
