use js to flip header styles on position according to 'hero video's height

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import { Image } from "astro:assets";
 
 <fragment class="flex w-full fixed justify-center min-h-[11vh] z-50">
   <header
-    class="bg-stone-100 w-11/12 flex justify-between items-center px-4 py-2 transition-all duration-1000 ease-in-out rounded-b-md border-b-2 border-x border-cyan-600 shadow-lg shadow-slate-700"
+    class="bg-frosted-glass text-slate-100 w-11/12 flex justify-between items-center px-4 py-2 transition-all duration-500 ease-in-out rounded-b-md border-b-2 border-x border-cyan-600 shadow-lg shadow-rose-800"
   >
     <span class="w-1/4 min-w-32 max-w-36">
       <Image src={sglLogo} alt="SGL Trucking LTD." />
@@ -28,7 +28,21 @@ import { Image } from "astro:assets";
 <script>
   document.addEventListener("scroll", () => {
     const currY = window.scrollY;
+    const vidHeight = document.querySelector("video")?.scrollHeight;
     const header = document.querySelector("header");
+
+    if (vidHeight)
+      if (currY > vidHeight) {
+        header?.classList.add("bg-slate-100");
+        header?.classList.add("text-black");
+      } else if (
+        header?.classList.contains("bg-slate-100") &&
+        currY < vidHeight
+      ) {
+        header?.classList.remove("text-black");
+        header?.classList.remove("bg-slate-100");
+      }
+
     if (currY > 0 && !header?.classList.contains("w-full")) {
       header?.classList.add("w-full");
       header?.classList.remove("w-11/12");
