added favicon and the meta tags to associate them as well as description tags and other media tags

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,8 +17,25 @@ let isMobileView = false;
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
+    <meta
+      name="description"
+      property="og:description"
+      content="SGL Trucking Ltd. located in Surrey / Delta BC, Canada. Transnational carrier service. Offering unmatched reliability, SGL Trucking is the best transportation company in The Greater Vancouver Region, with years of reputable experience."
+    />
+    <!-- <meta property="url" content="https://www.sgltrucking.com" /> -->
+    <!-- Social Media -->
+    <meta
+      property="og:description"
+      content="SGL Trucking Ltd. located in Surrey / Delta BC, Canada. Transnational carrier service. Offering unmatched reliability, SGL Trucking is the best transportation company in The Greater Vancouver Region, with years of reputable experience."
+    />
+    <meta property="og:site_name" content="101 Vinylz" />
+    <meta property="og:url" content="https://www.101vinylz.com" />
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <!-- <meta name="generator" content={Astro.generator} /> -->
     <title>{title}</title>
   </head>
   <body class="relative">
