--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ import { Image } from "astro:assets";
   <!-- HERO END -->
 
   <main class="h-auto text-stone-600 text-center">
-    <div class="w-full bg-slate-100 py-12">
+    <div class="w-full bg-stone-100 py-12">
       <div class="m-auto p-4 max-w-[calc(100% - 2rem)] max-w-[800px]">
         <h2 class="text-4xl text-stone-800 pb-1">SGL Trucking Ltd.</h2>
         <h3 class="text-2xl text-stone-800">
@@ -74,26 +74,61 @@ import { Image } from "astro:assets";
         </p>
       </div>
 
-      <div class="w-full flex justify-center">
-        <div class="swiper">
+      <div class="w-full flex justify-center max-h-96 px-8 sm:px-24 lg:px-48">
+        <div class="swiper" data-swiper-autoplay={true}>
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <Image
-                class="max-w-96"
+                class="w-full object-contain"
                 src={blueTruckPic}
                 alt="Shot of a blue SGL truck in the winter with haul in tow."
               />
             </div>
             <div class="swiper-slide">
               <Image
-                class="max-w-96"
+                class="w-full object-contain"
                 src={truckFleetPic}
                 alt="Line up shot of the SGL truck cabs"
               />
             </div>
             <div class="swiper-slide">
               <Image
-                class="max-w-96"
+                class="w-full object-contain"
+                src={trailersPic}
+                alt="Line up shot of the SGL dry van trailers plus a cab"
+              />
+            </div>
+            <div class="swiper-slide">
+              <Image
+                class="w-full object-contain"
+                src={trailersPic}
+                alt="Line up shot of the SGL dry van trailers plus a cab"
+              />
+            </div>
+            <div class="swiper-slide">
+              <Image
+                class="w-full object-contain"
+                src={trailersPic}
+                alt="Line up shot of the SGL dry van trailers plus a cab"
+              />
+            </div>
+            <div class="swiper-slide">
+              <Image
+                class="w-full object-contain"
+                src={trailersPic}
+                alt="Line up shot of the SGL dry van trailers plus a cab"
+              />
+            </div>
+            <div class="swiper-slide">
+              <Image
+                class="w-full object-contain"
+                src={trailersPic}
+                alt="Line up shot of the SGL dry van trailers plus a cab"
+              />
+            </div>
+            <div class="swiper-slide">
+              <Image
+                class="w-full object-contain"
                 src={trailersPic}
                 alt="Line up shot of the SGL dry van trailers plus a cab"
               />
