--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -6,7 +6,7 @@ import Navigation from "./Navigation.astro";
   class="menu-overlay animate-fade-in hidden flex overflow-hidden w-full top-0 fixed h-[100vh] z-50 bg-frosted-glass backdrop-filter backdrop-blur"
 >
   <div
-    class="mobile-menu bg-amber-100 w-5/12 sm:w-4/12 md:w-3/12 right-0 absolute flex h-[100vh] z-100"
+    class="mobile-menu bg-slate-200 border-l border-slate-500 w-5/12 sm:w-4/12 md:w-3/12 right-0 absolute flex h-[100vh] z-100"
   >
     <Navigation orientation="vertical" />
   </div>
