--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -12,11 +12,11 @@ const { orientation } = Astro.props;
   <ul
     class:list={[
       ` flex text-center items-center`,
-      `${orientation === "vertical" && "flex-col items-center w-full"}`,
+      `${orientation === "vertical" && " flex-col items-center w-full pt-6"}`,
     ]}
   >
     <li
-      class:list={`sm:ml-2.5 text-center px-2 relative flex${orientation === "vertical" && "w-full py-4"}`}
+      class:list={`sm:ml-2.5 text-center px-2 relative md:flex${orientation === "vertical" && " w-full py-4"}`}
     >
       <a href="/">Home</a>
     </li>
