--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,8 @@ import canUsImage from "../assets/us-canada.png";
 import trailersPic from "../assets/cropped-sgl-trailer.webp";
 import blueTruckPic from "../assets/cropped-sgl-truck-3.webp";
 import truckFleetPic from "../assets/cropped-sgl-TRUCK-6.webp";
+import coolTruckPic from "../assets/cool-truck.avif";
+
 import { Image } from "astro:assets";
 ---
 
@@ -48,7 +50,7 @@ import { Image } from "astro:assets";
   </div>
   <!-- HERO END -->
 
-  <main class="h-auto text-stone-600 text-center">
+  <main class="h-auto text-stone-700 text-center">
     <div class="w-full bg-stone-100 py-12">
       <div class="m-auto p-4 max-w-[calc(100% - 2rem)] max-w-[800px]">
         <h2 class="text-4xl text-stone-800 pb-1">SGL Trucking Ltd.</h2>
@@ -74,61 +76,63 @@ import { Image } from "astro:assets";
         </p>
       </div>
 
-      <div class="w-full flex justify-center max-h-96 px-8 sm:px-24 lg:px-48">
+      <div
+        class="w-full flex justify-center max-h-96 px-8 sm:px-24 lg:px-48 mt-4"
+      >
         <div class="swiper" data-swiper-autoplay={true}>
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <Image
-                class="w-full object-contain"
+                class="w-full object-cover"
                 src={blueTruckPic}
                 alt="Shot of a blue SGL truck in the winter with haul in tow."
               />
             </div>
             <div class="swiper-slide">
               <Image
-                class="w-full object-contain"
+                class="w-full object-cover"
                 src={truckFleetPic}
                 alt="Line up shot of the SGL truck cabs"
               />
             </div>
             <div class="swiper-slide">
               <Image
-                class="w-full object-contain"
+                class="w-full object-cover"
                 src={trailersPic}
                 alt="Line up shot of the SGL dry van trailers plus a cab"
               />
             </div>
             <div class="swiper-slide">
               <Image
-                class="w-full object-contain"
+                class="w-full object-cover"
                 src={trailersPic}
                 alt="Line up shot of the SGL dry van trailers plus a cab"
               />
             </div>
             <div class="swiper-slide">
               <Image
-                class="w-full object-contain"
+                class="w-full object-cover"
                 src={trailersPic}
                 alt="Line up shot of the SGL dry van trailers plus a cab"
               />
             </div>
             <div class="swiper-slide">
               <Image
-                class="w-full object-contain"
+                class="w-full object-cover"
                 src={trailersPic}
                 alt="Line up shot of the SGL dry van trailers plus a cab"
               />
             </div>
             <div class="swiper-slide">
               <Image
-                class="w-full object-contain"
+                class="w-full object-cover"
                 src={trailersPic}
                 alt="Line up shot of the SGL dry van trailers plus a cab"
               />
             </div>
             <div class="swiper-slide">
               <Image
-                class="w-full object-contain"
+                class="w-full object-cover"
                 src={trailersPic}
                 alt="Line up shot of the SGL dry van trailers plus a cab"
               />
@@ -138,7 +142,7 @@ import { Image } from "astro:assets";
       </div>
     </div>
 
-    <div class="w-full pt-12 z-10 relative">
+    <div class="w-full py-12 relative bg-stone-200 z-10">
       <div class="m-auto p-4 max-w-[calc(100% - 2rem)] max-w-[800px]">
         <h3 class="text-4xl text-center text-stone-800">
           Why choose SGL Trucking LTD?
@@ -161,16 +165,14 @@ import { Image } from "astro:assets";
           Your load is in safe and secure hands.
         </p>
       </div>
-    </div>
-    <div class="relative w-full z-0">
-      <Image
-        class="absolute sm:min-w-fit right-0 translate-y-[-30rem] transform z-0 opacity-35"
-        src={canUsImage}
-        alt="Image showing the connection of Canada and the US"
-      />
-    </div>
-    <div class="w-full relative py-12 z-10">
-      <div class="m-auto p-4 max-w-[calc(100% - 2rem)] max-w-[800px] z-10">
+      <div class="relative w-full">
+        <Image
+          class="absolute sm:min-w-fit right-0 translate-y-[-30rem] transform -z-10 opacity-35"
+          src={canUsImage}
+          alt="Image showing the connection of Canada and the US"
+        />
+      </div>
+      <div class="m-auto p-4 max-w-[calc(100% - 2rem)] max-w-[800px]">
         <h3 class="text-4xl text-center text-stone-800">
           Freight all over the US and Canada.
         </h3>
@@ -191,7 +193,7 @@ import { Image } from "astro:assets";
       </div>
     </div>
 
-    <div class="w-full bg-stone-100 pt-12">
+    <div class="w-full bg-stone-100 py-12">
       <div class="m-auto p-4 max-w-[calc(100% - 2rem)] max-w-[800px]">
         <h3 class="text-4xl text-center text-stone-800">
           Environmental Policy
@@ -267,22 +269,28 @@ import { Image } from "astro:assets";
           </button>
         </div>
       </div>
-
-      <div class="w-full bg-sky-600 py-6 text-slate-50">
-        <div class="m-auto p-4 max-w-[calc(100% - 2rem)]">
-          <h3 class="text-3xl text-center mb-4">Are you looking for work?</h3>
-          <h4 class="text-2xl text-center mb-4">We are hiring drivers!</h4>
-          <p class="text-base">
-            Do you have a Class 1 License with Air brake certificate?
-            <br />
-            Do you have relevant driving experience in US and Canada?
-          </p>
-          <div class="w-full flex justify-center mt-4">
-            <button
-              class="bg-amber-600 text-base py-2 px-6 rounded text-white transition-colors hover:bg-orange-500"
-              >Apply Today</button
-            >
-          </div>
+    </div>
+    <div class="h-[70vh] relative">
+      <Image
+        class="object-cover max-h-full h-full w-full fixed -z-10 bottom-0"
+        src={coolTruckPic}
+        alt="truck"
+      />
+    </div>
+    <div class="w-full bg-sky-600 py-6 text-slate-50">
+      <div class="m-auto p-4 max-w-[calc(100% - 2rem)]">
+        <h3 class="text-3xl text-center mb-4">Are you looking for work?</h3>
+        <h4 class="text-2xl text-center mb-4">We are hiring drivers!</h4>
+        <p class="text-base">
+          Do you have a Class 1 License with Air brake certificate?
+          <br />
+          Do you have relevant driving experience in US and Canada?
+        </p>
+        <div class="w-full flex justify-center mt-4">
+          <button
+            class="bg-amber-600 text-base py-2 px-6 rounded text-white transition-colors hover:bg-orange-500"
+            >Apply Today</button
+          >
         </div>
       </div>
     </div>
