fixed the title.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import coolTruckPic from "../assets/cool-truck.avif";
 import { Image } from "astro:assets";
 ---
 
-<Layout title="SGL Trucking">
+<Layout title="SGL Trucking LTD. - Home">
   <!-- HERO -->
   <div class="text-white relative h-[100vh] w-full">
     <video
