Beginning About Us page.

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -25,7 +25,7 @@ const { orientation } = Astro.props;
       client:load
       text={"About"}
       subTexts={[
-        { text: "About", path: "#" },
+        { text: "About Us", path: "/about" },
         { text: "Our Services", path: "#" },
         { text: "Environmental Policy", path: "#" },
       ]}
@@ -34,9 +34,9 @@ const { orientation } = Astro.props;
 
     <PopupNavigation
       client:load
-      text={"Contact Us"}
+      text={"Contact"}
       subTexts={[
-        { text: "Contact", path: "#" },
+        { text: "Contact Us", path: "#" },
         { text: "Careers", path: "#" },
       ]}
       orientation={orientation}
