saving small changes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,9 @@ import sglLogo from "../assets/sgl-Trucking.webp";
 import { Image } from "astro:assets";
 ---
 
-<fragment class="flex w-full fixed justify-center min-h-[11vh] z-50">
+<fragment
+  class="flex w-full fixed justify-center min-h-[12vh] max-h-[12vh] z-50"
+>
   <header
     class="bg-frosted-glass-light text-black w-11/12 flex justify-between items-center px-4 py-2 transition-all duration-500 ease-in-out rounded-b-md border-b-2 border-x border-cyan-600 shadow-lg shadow-rose-800"
   >
