--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,4 +2,28 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="SGL Trucking LTD. - About Us"> stuff </Layout>
+<Layout title="SGL Trucking LTD. - About Us">
+  <main>
+    <div class="pt-[12vh] w-full bg-sky-500"></div>
+    <div class="h-[25vh] flex justify-center items-center bg-sky-500">
+      <h1>About Us</h1>
+    </div>
+    <p>
+      About SGL Trucking Ltd. SGL Trucking was established in 2010. Since this
+      time we have acquired experienced, professional employees who are
+      constantly thriving for excellence. Their motivation has quickly turned
+      this company into one of the largest transportation companies in The
+      Greater Vancouver Region. SGL trucking Ltd. thrives on meeting our
+      customers' needs. Our experience have allowed us to provide our customers
+      with reliable and on time service. SGL Trucking Ltd. understands that the
+      transportation industry is constantly advancing and in order to remain
+      competitive and effective we are continuously expanding our services. SGL
+      Trucking Ltd. has emerged as a leading international truckload carrier in
+      Canada and the United States of America. By blending the latest in
+      trucking and transport technology with the traditional values of quality
+      services, on-time delivery and responding to the needs of the customer,
+      our company has become the service carrier of choice. SGL Trucking Ltd is
+      the reliable source for all your trucking and transportation needs.
+    </p>
+  </main>
+</Layout>
