--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { Image } from "astro:assets";
 
 <Layout title="SGL Trucking LTD. - Home">
   <!-- HERO -->
-  <div class="text-white relative h-[100vh] w-full">
+  <div class="text-white relative h-[100vh] w-full" id="hero">
     <video
       autoplay
       muted
